--- a/Kernel/configs/vayu2.config.json
+++ b/Kernel/configs/vayu2.config.json
@@ -4,7 +4,7 @@
       "name": "POCOX3PRO.2",
       "repo": "https://github.com/Marius586/kernel_xiaomi_vayu_upstream",
       "branch": "lion-openela",
-      "device": "vayu2",
+      "device": "vayu",
       "defconfig": "vayu_defconfig"
     },
     "toolchains": [
